Fixed lightbulb element behind gauge needle

--- a/style/style.scss
+++ b/style/style.scss
@@ -4,7 +4,9 @@
 * {
     font-family: 'Muli', sans-serif;
 }
-
+img {
+    display:none;
+}
 html,body {
     margin: 0;
     padding: 0;
